corrected spacing

--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 .container
 {
-  margin: 0 auto;
-  max-width: 460px;
+  margin: 20px auto;
+  width: 380px;
   background-color: #FFFFFF;
-  margin:20px 150px 20px 150px;
-  padding: 30px;
+  padding: 25px;
 }
 
 h1
 {
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: bold;
   margin-top: 0px;
   margin-bottom: 10px;
@@ -31,15 +30,10 @@ body
 
 img
 {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   padding-right: 10px;
-  padding-top: 10px;
-}
-
-.spacing
-{
-  padding: 5px;
+  padding-top: 8px;
 }
 
 h2
@@ -51,6 +45,7 @@ h2
   border-bottom-style: solid;
   border-color: #CF965B;
   border-width: 2px;
+  margin-bottom: 8px;
 }
 
 .city-description
